<resources>
    <string name="app_name">Pathology</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="reports">View Reports</string>
    <string name="upload">Upload Reports</string>
    <string name="add_user">Add Doctor</string>
    <string name="send_greeting">Send Greeting</string>
    <string name="contact">Contact</string>
    <string name="menu_settings">Reset Password</string>
    <string name="menu_contact_us">Contact Us</string>
    <string name="logout">Logout</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="organization">Hospital or Clinic</string>
    <string name="pdf_file_name">Pdf file Name</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="reset">Reset</string>

    <string-array name="branch_array">
        <item>Branch</item>
        <item>Kurla</item>
        <item>Chembur</item>
        <item>Govandi</item>
    </string-array>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Pathology</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_view_report">View Reports</string>
    <string name="menu_upload_report">Upload Report</string>
    <string name="menu_add_doctor">Add Doctor</string>
    <string name="menu_send_greeting">Send Greeting</string>
    <string name="menu_logout">Logout</string>
    <string name="search_report">Search Report</string>
</resources>