<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_view_report"
            android:title="@string/menu_view_report" />
        <item
            android:id="@+id/nav_upload_report"
            android:title="@string/menu_upload_report" />
        <item
            android:id="@+id/nav_add_doctor"
            android:title="@string/menu_add_doctor" />
        <item
            android:id="@+id/nav_greeting"
            android:title="@string/menu_send_greeting" />
        <item
            android:id="@+id/nav_about_us"
            android:title="@string/menu_contact_us"/>
        <item
            android:id="@+id/nav_logout"
            android:title="@string/menu_logout"/>

    </group>
</menu>