<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_view_report">

    <fragment
        android:id="@+id/nav_view_report"
        android:name="com.example.pathology.ViewFragment"
        android:label="@string/menu_view_report"
        tools:layout="@layout/fragment_view_report" />

    <fragment
        android:id="@+id/nav_upload_report"
        android:name="com.example.pathology.UploadFragment"
        android:label="@string/menu_upload_report"
        tools:layout="@layout/fragment_upload_report" />

    <fragment
        android:id="@+id/nav_add_doctor"
        android:name="com.example.pathology.AddDoctorFragment"
        android:label="@string/menu_add_doctor"
        tools:layout="@layout/fragment_add_doctor" />

    <fragment
        android:id="@+id/nav_greeting"
        android:name="com.example.pathology.GreetingFragment"
        android:label="@string/menu_send_greeting"
        tools:layout="@layout/fragment_greeting" />

    <fragment
        android:id="@+id/nav_about_us"
        android:name="com.example.pathology.AboutUsFragment"
        android:label="@string/menu_contact_us"
        tools:layout="@layout/fragment_about_us" />
    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.pathology.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout" />

</navigation>