<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation_doctor"
    app:startDestination="@+id/nav_view_report">

    <fragment
        android:id="@+id/nav_view_report"
        android:name="com.example.pathology.ViewFragment"
        android:label="@string/menu_view_report"
        tools:layout="@layout/fragment_view_report" />

    <fragment
        android:id="@+id/nav_reset_password"
        android:name="com.example.pathology.ResetPasswordFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_reset_password" />

    <fragment
        android:id="@+id/nav_about_us"
        android:name="com.example.pathology.AboutUsFragment"
        android:label="@string/menu_contact_us"
        tools:layout="@layout/fragment_about_us" />

</navigation>